--- a/Changes
+++ b/Changes
@@ -1,2 +1,10 @@
+0.2  2014-07-11
+      - switch shebang to /usr/bin/perl (/bin/env is not that common apparently,
+        maybe /usr/bin/env would have been better, but I'm hoping /usr/bin/perl
+        is really standard.)
+      - Use the older API for Getopt::Long (should work in 2.38 at least,
+        probably older versions as well.)
+      - Removed test that assumed "No such file" will be in English
+
 0.1  2014-07-11
       - Initial release
