--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.3  2014-07-12
+      - Attempting to fix 01_invoke.t on Win32
+
 0.2  2014-07-11
       - switch shebang to /usr/bin/perl (/bin/env is not that common apparently,
         maybe /usr/bin/env would have been better, but I'm hoping /usr/bin/perl
